fix: use alert instead of trigger also in header AB#12701

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -29,7 +29,16 @@
       }
     },
     "today": "TODAY",
-    "situational-overview": "Situational Overview"
+    "triggered-message": {
+      "eap": {
+        "yes": "TRIGGERED",
+        "no": "NON-TRIGGERED"
+      },
+      "no-eap": {
+        "yes": "ALERT",
+        "no": "NO ALERTS"
+      }
+    }
   },
   "aggregates-component": {
     "header-title-prefix": "Situation in",
