--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -122,6 +122,14 @@
         "overview": "The following {{ nrStoppedAreas }} {{adminAreaLabelPlural}} were manually stopped and listed below in order of {{ actionIndicator }}.",
         "instruction": "To see when this was done and by whom, click on the area in the map.",
         "area": "The floods trigger warning for <strong>{{ placeCodeName }}</strong> activated on <strong>{{ startDate }}</strong> was manually stopped by <strong>{{ displayName }}</strong> on <strong>{{ stoppedDate }}</strong>."
+      },
+      "ken-triggers": {
+        "opening": "Due to the",
+        "mam": "MAM",
+        "ond": "OND",
+        "below-average": "Below Average",
+        "forecast": "Forecast",
+        "actions": "the following <strong>{{ nrActions }}</strong> actions should be taken"
       }
     },
     "typhoon": {
