--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -101,10 +101,13 @@
       "active-event-no-trigger": {
         "welcome": "There is <strong>no active trigger</strong> any more, as can be seen in the map, which always reflects the latest forecast. However, you can still see here the EAP-actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. These actions stay visible here for 7 days after the end-date."
       },
+      "clear-out": {
+        "warning": "Please be aware that the EAP-actions related to this trigger will be automatically cleared out by the IBF-systemafter this month, due to the start of the next forecast season starting.",
+        "message": "Old EAP-actions have been automatically cleared out by the IBF-system, due to the start of the next forecast season."
+      },
       "active-event": {
         "overview": "There are {{ nrTriggeredAreas }} {{ adminAreaLabelPlural }} exposed. They are listed below in order of {{ actionIndicator}}.",
         "instruction": "Please select the area on the map to monitor, select and send the pre-planned anticipatory actions executed in each area and eventually close the event.",
-        "clear-out-warning": "Please be aware that the EAP-actions related to this trigger will be automatically cleared out after this month, due to the next forecast season.",
         "place-name": "{{ adminAreaLabel }}: <strong>{{ placeName }}</strong>",
         "exposed": "Exposed Population: <strong>{{ exposedNumber }}</strong>",
         "forecast-info": {
