--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -45,9 +45,10 @@
   "areas-of-focus-summary-component": { "title": "Actions Summary" },
   "ibf-guide-component": {
     "title": "IBF Guide",
-    "pdf": "PDF",
-    "click": "click here",
-    "video": "Video"
+    "pdf-and-video": "PDF and Video Guide",
+    "description": "To get a quick guide on how this dashboard works you can look at either the PDF manual guide here or the video guide below.",
+    "pdf": "PDF Guide",
+    "video": "Video Guide"
   },
   "chat-component": {
     "floods": {
