--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -1,7 +1,11 @@
 {
   "app-name": "IBF-dashboard",
-  "common": { "version": "Version" },
-  "activation-page": { "activation-report": "Activation Report" },
+  "common": {
+    "version": "Version"
+  },
+  "activation-page": {
+    "activation-report": "Activation Report"
+  },
   "login-page": {
     "title": "Login",
     "welcome": "Hello! Welcome to IBF.",
@@ -30,8 +34,14 @@
     },
     "today": "TODAY",
     "triggered-message": {
-      "eap": { "yes": "TRIGGERED", "no": "NON-TRIGGERED" },
-      "no-eap": { "yes": "ALERT", "no": "NO ALERTS" }
+      "eap": {
+        "yes": "TRIGGERED",
+        "no": "NON-TRIGGERED"
+      },
+      "no-eap": {
+        "yes": "ALERT",
+        "no": "NO ALERTS"
+      }
     }
   },
   "aggregates-component": {
@@ -42,12 +52,14 @@
     "all-prefix": "All",
     "exposed-subgroups": ""
   },
-  "areas-of-focus-summary-component": { "title": "Actions Summary" },
+  "areas-of-focus-summary-component": {
+    "title": "Actions Summary"
+  },
   "ibf-guide-component": {
     "title": "IBF Guide",
     "pdf-and-video": "PDF and Video Guide",
-    "description": "To get a quick guide on how this dashboard works you can look at either the PDF manual guide here or the video guide below.",
-    "pdf": "PDF Guide",
+    "description": "To get a quick guide on how this dashboard works you can look at either the video guide below or the PDF manual here.",
+    "pdf": "PDF Manual",
     "video": "Video Guide"
   },
   "chat-component": {
@@ -299,7 +311,11 @@
           "floods": "Estimated exposed number of people living in female-headed households living in the flood extent area within the areas currently triggered. This number is calculated by multiplying the overall percentage of households with adult females as decision-maker and main income producer in an area, by the total exposed population in that area.<br /><br />Note that the estimate number is not the number of households, but the number of people living in a housholds. In this calculation a household size of 4.7 is used as average estimate.<br /><br />. The number of people in female headed households in the flood extent is derived from the below sources.<br /><br />Source data:<ul><li>Female Headed Households: <a href='https://unstats.un.org/unsd/demographic/sources/census/wphc/Uganda/UGA-2016-05-23.pdf'>https://unstats.un.org/unsd/demographic/sources/census/wphc/Uganda/UGA-2016-05-23.pdf.</a> Year: 2014.</li><li>Total Population: High Resolution Settlement Layer (HRSL). Source imagery for HRSL © 2016 DigitalGlobe. Accessed 01-01-2020. Facebook Connectivity Lab and Center for International Earth Science Information Network - CIESIN - Columbia University. 2016.  <a href='https://www.ciesin.columbia.edu/data/hrsl/'>https://www.ciesin.columbia.edu/data/hrsl/</a></li><li>Flood extent: The flood extent maps compare six global flood hazard models and one local model. These models are CaMa-UT [Yamazaki D 2011], GLOFRIS [Winsemius H 2013], ECMWF [Pappenberge 2012], JRC [Dottori 2016], SSBN [Sampson 2015], CIMA-UNEP [UNISDR 2015] and local model ATKINS[2012].</li></ul>:"
         }
       },
-      "houses_affected": { "PHL": { "typhoon": "" } },
+      "houses_affected": {
+        "PHL": {
+          "typhoon": ""
+        }
+      },
       "population_affected": {
         "EGY": {
           "heavy-rain": "Number of people exposed is calculated by the population living in the rainfall extent area within the governorates currently triggered. The number of people and the rainfall extent are derived from the below sources.<br /><br />Source (Population Data): High Resolution Settlement Layer (HRSL). Source imagery for HRSL © 2016 DigitalGlobe. Accessed 01-01-2020. Facebook Connectivity Lab and Center for International Earth Science Information Network - CIESIN - Columbia University. 2016.  <a href='https://www.ciesin.columbia.edu/data/hrsl/'>https://www.ciesin.columbia.edu/data/hrsl/</a><br /><br/>Explanation Rainfall Extent: Global Ensemble Forecast System (GEFS) is a global weather forecast model produced by the NOAA's National Centers for Environmental Prediction (NCEP). Dozens of atmospheric forecast variables up to 16 days in the future, including precipitation, are available through this dataset.<br>The Rainfall Extent layer shows areas where forecasted GEFS precipitation occurrence exceeds defined thresholds."
@@ -393,7 +409,9 @@
     },
     "layers-section": {
       "alert_threshold": {
-        "EGY": { "heavy-rain": "TBD" },
+        "EGY": {
+          "heavy-rain": "TBD"
+        },
         "ETH": {
           "floods": "",
           "malaria": "An alert is released when two conditions are simultaneously the relative number of malaria cases is anomalous accordance to WHO guidelines, by comparing it to its monthly averages, the second condition is that the absolute number of malaria cases is high and thus likely to require humanitarian intervention."
@@ -407,8 +425,12 @@
           "floods": "<p>The layer shows each county triggered based on two parameters from the 3-days GLOFAS forecast on a daily basis: the return period of the forecasted flood and the probability of occurrence. The trigger will activate when GloFAS issues a forecast of at least 50% probability of occurrence of a 5 year return period flood within the next 7 days. The GLOFAS flood forecast triggers except in the  manucipalities where the False Alarm Ratio (RAR) &gt;0.5</p><p><strong>Source link</strong>: <a href='https://www.globalfloods.eu/'>https://www.globalfloods.eu/</a></p><p><strong>Latest updated:&nbsp;</strong>September 2021</p><p><br></p>",
           "typhoon": ""
         },
-        "UGA": { "floods": "TBD" },
-        "ZMB": { "floods": "TBD" },
+        "UGA": {
+          "floods": "TBD"
+        },
+        "ZMB": {
+          "floods": "TBD"
+        },
         "ZWE": {
           "drought": "<p>The layer shows each province in the country with a drought risk at the end of the growing season (April), and as such determine which provinces are triggered when at least one of their districts is expected to face a +/- 6 year return period drought.</p> <p>The drought model is to assess a drought prediction skill of the 3-month running average Ni&ntilde;o 3.4 values and initiates a drought risk when there is a potential negative crop yield anomaly predicted. The model is developed based on the XGBoost algorithm tested and trained with historical ENSO: Seasonal ERSSTv5 and CHIRPS Rainfall data in relation to historical negative crop yield anomalies in April, which is used as drought impact proxy. Loss of crops, livestock loss, and child malnutrition and stunting are indicated by the ZRCS DRM working group and representatives from IFRC, PNS, and Red Cross Climate Centre (RCCC) &nbsp;as targeted drought impact</p><p>Source links:</p><ul><li>ENSO: Seasonal ERSSTv5 (1991-2020 base period) 3-month running average in Ni&ntilde;o 3.4 (5oNorth-5oSouth) (170-120oWest)) <a href='https://www.cpc.ncep.noaa.gov/data/indices/3mth.nino34.91-20.ascii.txt'>https://www.cpc.ncep.noaa.gov/data/indices/3mth.nino34.91-20.ascii.txt</a></li><li>CHIRPS: Rainfall Estimates from Rain Gauge and Satellite Observations | Climate Hazards Center - UC Santa Barbara (<a href='https://www.chc.ucsb.edu/data/chirps'>https://www.chc.ucsb.edu/data/chirps</a>)&nbsp;</li>     <li>Crop Yield data: Izumi, Toshichika (2019): Global dataset of historical yields v1.2 and v1.3 aligned version. PANGAEA, <a href='https://doi.org/10.1594/PANGAEA.909132'>https://doi.org/10.1594/PANGAEA.909132</a>,Supplement to Iizumi, Toshichika; Sakai, T (2020): The global dataset of historical yields for major crops 1981&ndash;2016. Scientific Data, 7(1), <a href='https://doi.org/10.1038/s41597-020-0433-7'>https://doi.org/10.1038/s41597-020-0433-7</a></li> </ul>"
         }
@@ -564,14 +586,22 @@
           "malaria": "<br />"
         }
       },
-      "Hotspot_Health": { "ETH": { "malaria": "<br />Source: " } },
+      "Hotspot_Health": {
+        "ETH": {
+          "malaria": "<br />Source: "
+        }
+      },
       "Hotspot_Water": {
         "ETH": {
           "floods": "<a href='https://healthsites.io/'>https://healthsites.io/</a>",
           "malaria": "WASH  need priority class: Hotspot Woredas Classification WASH <a href='http://www.ndrmc.gov.et/'>http://www.ndrmc.gov.et/</a>"
         }
       },
-      "houses_affected": { "PHL": { "typhoon": "TBD" } },
+      "houses_affected": {
+        "PHL": {
+          "typhoon": "TBD"
+        }
+      },
       "IPC_forecast_long": {
         "ETH": {
           "malaria": "IPC long forecast: Most likely food security outcomes -  the medium-term projection <a href='https://fews.net/IPC'>https://fews.net/IPC</a>"
@@ -750,8 +780,16 @@
           "floods": "Poverty Incidence is defined by the Multidiemensional Poverty Index and a $2 a day threshold. The layer gives an estimate of people living in poverty.<br /><br />Source: Tatem AJ, Gething PW, Bhatt S, Weiss D and Pezzulo C (2013) Pilot high resolution poverty maps, University of Southampton/Oxford. DOI: 10.5258/SOTON/WP00285. Year: 2010"
         }
       },
-      "prob_within_50km": { "PHL": { "typhoon": "TBD" } },
-      "rainfall": { "PHL": { "typhoon": "TBD" } },
+      "prob_within_50km": {
+        "PHL": {
+          "typhoon": "TBD"
+        }
+      },
+      "rainfall": {
+        "PHL": {
+          "typhoon": "TBD"
+        }
+      },
       "rainfall_extent": {
         "EGY": {
           "heavy-rain": "Global Ensemble Forecast System (GEFS) is a global weather forecast model produced by the NOAA's National Centers for Environmental Prediction (NCEP). Dozens of atmospheric forecast variables up to 16 days in the future, including precipitation, are available through this dataset.<br><br>The Rainfall Extent layer shows areas where forecasted GEFS precipitation occurrence exceeds defined thresholds."
@@ -793,16 +831,26 @@
           "floods": " The rice area map are absed on Philippine Rice Information System (PRISM) data.<br /><br />Source Link: PRISM website: <a href='https://prism.philrice.gov.ph/dataproducts/'>https://prism.philrice.gov.ph/dataproducts/</a> This data is based on the Philippine Rice Information System (PRISM) project which primarily aims to establish a nationwide information system on rice that provide information on rice areas and yield at a particular location and time, and information on factors that are affecting the yield. "
         }
       },
-      "roof_type": { "UGA": { "floods": "<br />" } },
+      "roof_type": {
+        "UGA": {
+          "floods": "<br />"
+        }
+      },
       "small_ruminants": {
-        "ZWE": { "drought": "<br />Source Link: PRISM website: " }
+        "ZWE": {
+          "drought": "<br />Source Link: PRISM website: "
+        }
       },
       "small_ruminants_exposed": {
         "ZWE": {
           "drought": "<a href='https://prism.philrice.gov.ph/dataproducts/'>https://prism.philrice.gov.ph/dataproducts/</a> This data is based on the Philippine Rice Information System (PRISM) project which primarily aims to establish a nationwide information system on rice that provide information on rice areas and yield at a particular location and time, and information on factors that are affecting the yield. "
         }
       },
-      "total_houses": { "PHL": { "typhoon": "TBD" } },
+      "total_houses": {
+        "PHL": {
+          "typhoon": "TBD"
+        }
+      },
       "total_idps": {
         "ETH": {
           "floods": "Total Internally Displaced People (IDPs) DTM Ethiopia National Displacement Report 7_2022",
@@ -815,7 +863,11 @@
           "malaria": "Predicted travel time (minutes) to nearest city <a href='https://malariaatlas.org/research-project/accessibility-to-healthcare/'>https://malariaatlas.org/research-project/accessibility-to-healthcare/</a>"
         }
       },
-      "typhoon_track": { "PHL": { "typhoon": "TBD" } },
+      "typhoon_track": {
+        "PHL": {
+          "typhoon": "TBD"
+        }
+      },
       "vegetation_condition": {
         "KEN": {
           "drought": "<p>The Vegetation condition  is one of the indicators monitored within the drought early warning system of NDMA as part of the biophysical type of indicator.This layer presents the Vegetation Condition Index VCI3M (3-month averaged VCI) as off . The VCI values return a drought category presented below with the corresponding thresholds.&nbsp;</p><ul>    <li>&gt;= 50 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Vegetation greenness above normal&nbsp;</li>    <li>&gt;= 35 - &lt;50 &nbsp;Normal vegetation greenness</li>    <li>&gt;=20 - &lt;35 &nbsp; Moderate vegetation deficit&nbsp;</li>    <li>&gt;=10 - &lt;20 &nbsp; Severe vegetation deficit&nbsp;</li>    <li>&lt;10 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Extreme vegetation deficit</li></ul><p>Once the VCI3M goes below a threshold of 35, the NDMA triggers a rapid food security assessment and has access to the National Drought Contingency Fund in order to implement its preparedness strategies and contingency plans.&nbsp;</p><p><strong>Source Link:</strong> National monthly Drought Update published by the National Drought Management Authority (NDMA) <a href='https://www.ndma.go.ke/index.php/resource-center/national-drought-bulletin'>https://www.ndma.go.ke/index.php/resource-center/national-drought-bulletin</a></p><p><strong>Latest updated:</strong> month, year</p>"
@@ -834,7 +886,9 @@
         }
       },
       "walking_travel_time_to_health": {
-        "ETH": { "malaria": "Ongoing (updated regularly)" }
+        "ETH": {
+          "malaria": "Ongoing (updated regularly)"
+        }
       },
       "wall_type": {
         "UGA": {
@@ -859,7 +913,11 @@
           "drought": "Number and location of functioning waterpoints accessible for people (Borehole, Protected Spring, Protected Shallow Well, Rainwater Harvesting, Sand or Sub-surface Dam, Spring, Surface Water, Undefined Shallow Well, Undefined Well, Unprotected Shallow Well).<br /><br />Source: <a href='https://www.waterpointdata.org/water-point-data'>https://www.waterpointdata.org/water-point-data</a>"
         }
       },
-      "windspeed": { "PHL": { "typhoon": "TBD" } }
+      "windspeed": {
+        "PHL": {
+          "typhoon": "TBD"
+        }
+      }
     }
   }
 }
