feat: make activation-log country & disaster specific AB#13509

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -4,7 +4,7 @@
     "version": "Version"
   },
   "activation-page": {
-    "activation-report": "Activation Report"
+    "activation-report": "Open all activations"
   },
   "login-page": {
     "title": "Login",
