--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -61,7 +61,10 @@
     "pdf-and-video": "PDF and Video Guide",
     "description": "To get a quick guide on how this dashboard works you can look at either the video guide below or the PDF manual here.",
     "pdf": "PDF Manual",
-    "video": "Video Guide"
+    "video": "Video Guide",
+    "whats-new-title": "What is new in IBF",
+    "whats-new-description": "To see what new features have been added to the IBF Portal, go to the following page.",
+    "whats-new-button": "What is new in IBF"
   },
   "chat-component": {
     "floods": {
