--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -165,7 +165,9 @@
         "welcome": "To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
       },
       "active-event-active-trigger": {
-        "welcome": "A trigger warning for typhoon <strong>{{ eventName }}</strong> was activated on <strong>{{ startDate }}</strong>. It is estimated to make landfall at <strong>{{ firstLeadTimeDate }}</strong>.<br><br>"
+        "welcome": "A trigger warning for typhoon <strong>{{ eventName }}</strong> was activated on <strong>{{ startDate }}</strong>. ",
+        "landfall": "It is estimated to make landfall at <strong>{{ firstLeadTimeDate }}</strong>.<br><br>",
+        "no-landfall": "It has already made landfall.<br><br>"
       },
       "active-event-below-trigger": {
         "welcome": "A warning for typhoon <strong>{{ eventName }}</strong> was activated on <strong>{{ startDate }}</strong>, but it is currently not predicted to reach trigger thresholds. It is estimated to make landfall at <strong>{{ firstLeadTimeDate }}</strong>.<br><br>"
