feat: upgrade stage-banner + show in all pages AB#14260

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -14,7 +14,10 @@
     "note": "NOTE: This dashboard works best in Chrome, Firefox, Safari and Microsoft Edge. The dashboard is not compatible with Internet Explorer.",
     "forgot-password": "Forgot password?",
     "forgot-password-message": "If you forgot your password please send a request to ",
-    "production-live": "Live"
+    "environment-label": {
+      "production": "Live",
+      "stage": "Demo"
+    }
   },
   "dashboard-page": {
     "dev-menu": {
