--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -90,6 +90,7 @@
         "update-failure": "Failed to update EAP action(s) in database.",
         "prompt-button-label": "OK",
         "stop-trigger-popup": {
+          "header": "Stop Trigger",
           "message": "Are you sure? You are about to stop the trigger warning in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
           "confirm": "Yes, stop trigger",
           "cancel": "No, keep trigger",
@@ -147,6 +148,7 @@
         "update-failure": "Failed to update EAP action(s) in database.",
         "prompt-button-label": "OK",
         "stop-trigger-popup": {
+          "header": "Stop Trigger",
           "message": "Are you sure? You are about to stop the trigger warning in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
           "confirm": "Yes, stop trigger",
           "cancel": "No, keep trigger",
@@ -189,6 +191,7 @@
         "update-failure": "Failed to update EAP action(s) updated in database.",
         "prompt-button-label": "OK",
         "stop-trigger-popup": {
+          "header": "Stop Trigger",
           "message": "Are you sure? You are about to stop the trigger warning in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
           "confirm": "Yes, stop trigger",
           "cancel": "No, keep trigger",
@@ -226,6 +229,7 @@
         "update-failure": "Failed to update SOP action(s) updated in database.",
         "prompt-button-label": "OK",
         "stop-trigger-popup": {
+          "header": "Stop Alert",
           "message": "Are you sure? You are about to stop the alert in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
           "confirm": "Yes, stop alert",
           "cancel": "No, keep alert",
@@ -263,6 +267,7 @@
         "update-failure": "Failed to update SOP action(s) updated in database.",
         "prompt-button-label": "OK",
         "stop-trigger-popup": {
+          "header": "Stop Alert",
           "message": "Are you sure? You are about to stop the alert in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
           "confirm": "Yes, stop alert",
           "cancel": "No, keep alert",
@@ -300,6 +305,7 @@
         "update-failure": "Failed to update SOP action(s) updated in database.",
         "prompt-button-label": "OK",
         "stop-trigger-popup": {
+          "header": "Stop Alert",
           "message": "Are you sure? You are about to stop the alert in <strong>{{ placeCodeName }}</strong>. This action can not be undone. Are you sure?",
           "confirm": "Yes, stop alert",
           "cancel": "No, keep alert",
@@ -310,6 +316,11 @@
         "overview": "The following {{ nrStoppedAreas }} {{adminAreaLabelPlural}} were manually stopped and listed below in order of {{ actionIndicator }}.",
         "instruction": "To see when this was done and by whom, click on the area in the map.",
         "area": "The floods trigger warning for <strong>{{ placeCodeName }}</strong> activated on <strong>{{ startDate }}</strong> was manually stopped by <strong>{{ displayName }}</strong> on <strong>{{ stoppedDate }}</strong>."
+      }
+    },
+    "common": {
+      "save-action": {
+        "header": "Action Result"
       }
     }
   },
